--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@
 
     .page1 .row2 {
         width: 100%;
+        color: red;
         height: 80px;
         /* background-color: #431717; */
         display: flex;
@@ -80,7 +81,7 @@
 
     .page1 .row2 a {
         text-decoration: none;
-        color: rgb(253, 248, 248);
+        color: rgb(232, 12, 12);
     }
 
     .page1 .row2 .col2 a {
