--- a/style.css
+++ b/style.css
@@ -1259,6 +1259,9 @@
     .page4 .row1 .col2 {
         margin-left: 12rem;
     }
+    .page2 .row1 .col1 h5 {
+        font-size: 2.2vw;
+    }
 
     .page4 .row2 .col1 {
         display: flex;
@@ -1453,6 +1456,26 @@
     .page1 .row1 .part-small {
         display: block !important;
     }
+    .page1 .row1 i {
+        font-size: 1.1rem;
+    }
+    .page1 .row2 .col3 i {
+        padding: 0px 8px;
+        font-size: 1.2rem;
+    }
+    .page1 .top .heading .elem h1 {
+        font-size: 7vw;
+    }
+    .page1 .top .heading .elem button {
+        font-size: 3.8vw;
+    }
+    .page2 .row1 .col1 h5 {
+        font-size: 4.2vw;
+    }
+    .page2 .row1 .col2 h1 {
+        font-size: 5.8vw;
+    }
+    
 
     .page1 .row1 .contacts {
         display: none;
@@ -1501,15 +1524,27 @@
         margin: 20px 32px;
         background-color: #080808;
     }
-
+    .page3 .row2 h1 {
+        font-size: 7vw;
+        margin-bottom: 10px;
+    }
+    .page3 .row2 h6 {
+        font-size: 2vw;
+        line-height: 2.6vw;
+    }
     .page3 .row3 {
         width: 100%;
-        min-height: 30px;
-        padding: 0px 10px;
+        min-height: 50px;
+        padding: 30px 42px;
     }
 
+    
     .page3 .row3 h6 {
         margin: 0px 5px;
+        font-size: 1.3rem;
+    }
+    .page3 .row4 {
+        margin-top: 0px;
     }
 
     .page4 .row1 {
@@ -1542,6 +1577,26 @@
         padding: 20px 20px;
         border-bottom: 1px solid black;
         border-right: none;
+    }
+    .page5div2 {
+        background-image: url("https://images.unsplash.com/photo-1583373834259-46cc92173cb7?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        min-height: 35vh;
+    }
+    .page5div2 .part1 {
+        width: 100%;
+        height: 0vw;
+        padding: 27px 79px;
+    }
+    .page5div2 .part2 h1 {
+        font-size: 5vw;
+    }
+    .page5div2 .part2 h6 {
+        font-size: 1.9vw;
     }
 
     .page6 {
