--- a/style.css
+++ b/style.css
@@ -1635,9 +1635,11 @@
     }
     .page8 .col1 {
         padding: 5vw 2vw;
+        display: block;
     }
     .page8 .col1 .part1 {
-        margin-bottom: 0rem;
+        font-size: 3.8vw;
+        margin-bottom: 0px;
     }
     .page8 .col2 {
         padding: 2vw 10vw;
@@ -1747,6 +1749,9 @@
     .page5div2 {
         justify-content: center;
     }
+    .page5div2 .part1 {
+        padding: 80px 79px;
+    }
 
     .page5div2 .part2 {
         margin-left: 8rem;
@@ -1758,23 +1763,28 @@
 
     .page6 {
         width: 100%;
-        min-height: 90vh;
+        min-height: 80vh;
     }
 
     .page6 .row1 {
         width: 100%;
         height: 20vh;
+        padding: 0px 20px;
+    }
+    .page6 .row1 .part1 {
+        font-size: 1.9vw;
+        height: 60%;
     }
 
     .page6 .row1 .part2 {
         align-items: flex-start;
         margin-left: 120px;
-        font-size: 8px;
+        font-size: 11px;
         height: 54%;
     }
 
     .page6 .row2 .owl-carousel .item .contain-img {
-        width: 14.9rem;
+        width: 18rem;
         height: 15rem;
     }
 
