--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@
         width: 100%;
         /* height: 35vh; */
         /* background-color: #bea0a0; */
+        overflow: hidden;
         text-transform: uppercase;
         padding: 77px 30px;
     }
