--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@
 
     .page1 .row1 a {
         text-decoration: none;
-        color: red;
+        color: rgb(0 54 59);
+        font-size: 1.3w;
     }
 
     .page1 .row2 {
@@ -83,7 +84,9 @@
 
     .page1 .row2 a {
         text-decoration: none;
-        color: rgb(232, 12, 12);
+        color: rgb(0 54 59);
+        font-size: 1.6vw;
+        font-weight: 400;
     }
 
     .page1 .row2 .col2 a {
@@ -204,13 +207,23 @@
         /* background-color: black; */
         z-index: 3;
         left: 30vw;
+        padding: 2vw 2vw;
 
     }
+    .imgdets>h1{
+        margin-bottom: 6vh;
+    }
+    .imgdets>p{
+        font-size: 1.2vw;
+    }
+    
 
     .image-containerfor-row2:hover .imgdets{
         left:0vw;
-        transition-duration: 1s;
-        background-color: #431717;
+        transition-duration: 0.8s;
+        background-color: #7b3535;
+        border: 1px solid black;
+        border-radius: 20px;
         /* transition: ease-in-out; */
     }
 
@@ -855,7 +868,7 @@
         width: 100%;
         height: 23.7vw;
 
-        padding: 5vw 2vw;
+        padding: 2vw 2vw;
     }
 
     .page9 .row2 .myowl .myown {
@@ -887,7 +900,7 @@
     .page9 .row2 .myowl .myown .row-1 {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 6vw;
+        margin-bottom: 3vw;
     }
 
     footer {
@@ -1011,12 +1024,12 @@
 
 @media (max-width:1440px) {
     .page9 .row2 .myowl .myown {
-        width: 30vw;
-        height: 23vw;
+        width: 25vw;
+        height: 18vw;
     }
 
     .page9 .row2 .myowl .myown .row-1 {
-        margin-bottom: 12vw;
+        margin-bottom: 3vw;
     }
 }
 
