--- a/About us/style.css
+++ b/About us/style.css
@@ -10,9 +10,9 @@ height: 100%;
 
 main{
     background-color: black;
-    width: 100%;
-    height: 100%;
-    padding: 2vh 2vw;
+    width: 100vw;
+    padding: 2vh 0vw;
+    color: aliceblue;
 
 }
 
@@ -22,9 +22,55 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    color: aliceblue;
 }
 
+.description{
+    width: 100vw;
+    /* background-color: blue; */
+    padding-top: 20px;
+    height: 93vh;
+    display: flex;
+}
 .description .dp{
+    width: 20rem;
+    height: 20rem;
+    align-items: center;
+    background-image: url("https://images.unsplash.com/photo-1591084728795-1149f32d9866?q=80&w=2564&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-position: center;
+    background-size: cover;
+    background-color: yellow;
+    border-radius: 50%;
+}
+
+.description .content{
+    margin-left: 6vw;
+    margin-top: 6vh;
+    width: 70vw;
+    height: 100%;
+    font-size: 1.2vw;
+    /* background-color: aquamarine; */
     
+}
+
+.container2{
+    width: 100vw;
+    height: 100vh;
+    /* background-color: aquamarine; */
+}
+.title h1{
+    margin-top: 10vh;
+    display: flex;
+    justify-content: center;
+    font-size: 5vw;
+    color: aquamarine;
+}
+.subcontent{
+    font-size: 1.3vw;
+    margin: 5vw ;
+    width: 80vw;
+    /* background-color: aquamarine; */
+}
+
+.subcontent h2{
+    color: rgb(5, 87, 180);
 }
