--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-
+        
         font-family: Georgia, "Times New Roman", Times, serif;
     }
 
@@ -12,17 +12,18 @@
         width: 100%;
         height: 100%;
     }
-
+    
     .main {
         position: relative;
         overflow: hidden;
+        /* background-color: #080808; */
     }
 
     /* page 1 start */
     .page1 {
         width: 100%;
         height: 100vh;
-        background-color: #4317175c;
+        /* background-color: #4317175c; */
     }
 
     .page1 .row1 {
@@ -31,7 +32,7 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        background-color: #f4d0d0af;
+        /* background-color: #f4d0d0af; */
         border-bottom: 1px solid white;
     }
 
@@ -58,7 +59,7 @@
     .page1 .row2 {
         width: 100%;
         height: 80px;
-        background-color: #f4d0d094;
+        background-color: #c0d4d4b9;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -85,7 +86,7 @@
         text-decoration: none;
         color: rgb(0, 4, 4);
         font-size: 1.6vw;
-        font-weight: 400;
+        font-weight: 500;
     }
 
     .page1 .row2 .col2 a {
@@ -161,7 +162,7 @@
     .page2 {
         width: 100%;
         min-height: 150vh;
-        background-color: #7b3535;
+        /* background-color: rgba(4, 41, 44, 0.169); */
     }
 
     .page2 .row1 {
@@ -178,7 +179,7 @@
 
     .page2 .row1 .col1 h5 {
         font-size: 1.2vw;
-        color: #fdfafa;
+        color: #0b0a0a;
 
     }
 
@@ -195,8 +196,12 @@
         object-position: center;
         display: block;
         border-radius: 20px;
+        
         overflow: hidden;
         position: relative;
+    }
+    .box{
+        border: 2px solid rgb(11, 10, 10);
     }
 
     .imgdets{
@@ -220,8 +225,8 @@
     .image-containerfor-row2:hover .imgdets{
         left:0vw;
         transition-duration: 0.8s;
-        background-color: #7b3535;
-        border: 1px solid black;
+        background-color: #d5bebecd;
+        /* border: 2px solid rgb(11, 10, 10); */
         border-radius: 20px;
         /* transition: ease-in-out; */
     }
@@ -232,6 +237,11 @@
         height: 100%;
         display: block;
 
+    }
+    .page2{
+        background-image: url("https://images.unsplash.com/photo-1636837955417-2d8a4e49368f?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+        background-position: center;
+        background-size: cover;
     }
 
     .page2 .row2 {
@@ -256,13 +266,14 @@
         width: 100%;
         min-height: 100vh;
         background-color: #d8c8c8;
+        background-image: url("https://images.unsplash.com/photo-1555181937-efe4e074a301?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     }
 
-    .page3 .row1 {
+    /* .page3 .row1 {
         width: 100%;
         height: 10vh;
         background-color: #7b3535;
-    }
+    } */
 
     .page3 .row2 {
         width: 100%;
@@ -320,10 +331,12 @@
     .swiper-wrapper {
         width: 2vw !important;
     }
-
+    
     .swiper-slide {
-        /* background-position: center;
-        background-size: cover; */
+        background-color: #f9f0f08b;
+        background-image: url("https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTg3fHx0ZXh0JTIwdGV4dHVyZXxlbnwwfHwwfHx8MA%3D%3D");
+        background-position: center;
+        background-size: cover; 
         width: 300px !important;
         /* width: 22% ; */
         height: 200px !important;
@@ -368,19 +381,22 @@
     .page4 {
         width: 100%;
         min-height: 100vh;
-        background-color: rgb(5, 58, 62);
+        /* background-color: rgb(5, 58, 62); */
+        background-image: url("https://images.unsplash.com/photo-1704924524043-553d46db5ce5?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+        background-position: center;
+        background-size: cover;
 
     }
 
     .page4 .row1 {
         display: flex;
         gap: 45rem;
-        color: white;
+        color: rgb(9, 9, 9);
         padding: 2.5% 4%;
         text-transform: uppercase;
     }
 
-    .page4 .row1 h1 {
+    .page4 .row1 .col1 {
         font-weight: 200;
     }
 
@@ -431,12 +447,12 @@
         margin-left: 8%;
         width: 80vh;
         height: 35vh;
-        background-color: rgb(4, 41, 44);
+        background-color: rgba(4, 41, 44, 0.169);
         padding: 20px 30px;
         text-transform: capitalize;
-        color: white;
+        color: rgb(7, 7, 7);
         border-radius: 20px;
-
+        border: 2px solid black;
     }
 
     .page4 .row2 .col1 .image-details .part1 {
@@ -444,9 +460,9 @@
         width: 72px;
         padding: 1px 3px;
         font-size: 20px;
-        border: 2px solid white;
+        border: 1px solid rgb(3, 3, 3);
         color: #080808;
-        background-color: aliceblue;
+        background-color: rgba(4, 41, 44, 0.169);
         border-radius: 45px;
 
         /* width: 80px;
@@ -485,17 +501,17 @@
     }
 
     .page4 .row3 .allfaculty {
-        width: 160px;
-        height: 45px;
+        width: 211px;
+        height: 61px;
         /* padding: 10px 10px; */
-        border: 1px solid white;
+        border: 2px solid rgb(13, 10, 10);
         display: flex;
         align-items: center;
         justify-content: center;
         border-radius: 40px;
-        color: white;
+        color: rgb(12, 12, 12);
         text-transform: uppercase;
-        font-size: 12px;
+        font-size: 16px;
 
     }
 
@@ -522,6 +538,7 @@
         align-items: center;
         margin: 50px 0px;
         justify-content: space-around;
+        background-color: white;
     }
 
     .page5div1 .part {
@@ -666,7 +683,7 @@
 
     .page7 {
         width: 100%;
-        height: 100vh;
+        height: 84vh;
         background-color: cadetblue;
         color: #fdfafa;
     }
@@ -811,6 +828,7 @@
         width: 28vw;
         padding: 20px 20px;
         border-radius: 20px;
+        border: 2px solid black;
 
     }
 
@@ -877,6 +895,7 @@
         background-color: rgba(80, 30, 120, 0.16);
         border-radius: 20px;
         padding: 20px 30px;
+        border: 2px solid black;
     }
 
     .page9 .row2 .myowl .myown .row-1 h6 {
