--- a/style.css
+++ b/style.css
@@ -311,6 +311,9 @@
         z-index: 10;
     }
 
+    #signup{
+        text-decoration: none;
+    }
     .page2 {
         width: 100%;
         min-height: 150vh;
